# cookiecutter-tuw-jupyter

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Justfile  Makefile  README.md  pyproject.toml  {{cookiecutter.project_slug}}.ipynb  {{cookiecutter.project_slug}}.yml
{{cookiecutter.project_slug}}/.github/workflows/: binder.yaml
{{cookiecutter.project_slug}}/.setup/: Makefile
{{cookiecutter.project_slug}}/setup/: Makefile  README.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: pyproject.toml
