[tool.poetry]
name = "pangeo-workflow-examples"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
eodag = "^2.12.1"
ipykernel = "^6.29.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.0"
nbgitpuller = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"