[project]
authors = [{ name = "Remote Sensing Group, TU Wien", email = "rs@tuwien.ac.at" }]
name = "{{cookiecutter.project_slug}}_notebook"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eodag>=3.10.0",
    "ipykernel>=7.1.0",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Natural Language :: English",
]


[tool.uv]
# For GDAL on Linux Machines to be installed via `uv pip install`
find-links = ["https://girder.github.io/large_image_wheels"]


[tool.uv.workspace]
members = ["src/*"]


[tool.uv.sources]
{{cookiecutter.project_slug}} = { workspace = true }


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
# Same as Black.
line-length = 88
indent-width = 4


[tool.ruff.lint]
select = ["ALL"]
ignore = []
fixable = ["ALL"]
unfixable = []


[tool.ruff.format]
# Same as Black.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

